# chess

./: CMakeLists.txt  LICENSE  README.md
chess/: CMakeLists.txt  main.cpp
chess/data/: scene.json  scene.xml
src/: camera.cpp  camera.h  image.cpp  image.h  object.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shapes.h  vector.h  window.cpp  window.h
src/objects/: camera.cpp  camera.h  object.cpp  object.h  transform.cpp  transform.h
src/shapes/: shape.h  sphere.cpp
